Creato la runtime con launch4j