@@ -7,10 +7,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<mainClassName>sm.claudio.imaging.javafx.MainApp2</mainClassName>
+		<mainClassName>sm.claudio.imaging.javafx.MainAppFxml</mainClassName>
 		<lo4j2.vers>2.14.0</lo4j2.vers>
 		<java.version>16</java.version>
 		<javafx.version>16</javafx.version>
+		<lombok.version>1.18.16</lombok.version>
 	</properties>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx -->
@@ -65,7 +66,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.16</version>
+			<version>${lombok.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-imaging -->
@@ -126,10 +127,13 @@
 							<descriptorRefs>
 								<descriptorRef>jar-with-dependencies</descriptorRef>
 							</descriptorRefs>
+							<finalName>imaging</finalName>
+							<appendAssemblyId>false</appendAssemblyId>
 							<archive>
 								<manifest>
 									<!-- <mainClass>sm.claudio.imaging.main.MainApp</mainClass> -->
-									<mainClass>sm.claudio.imaging.swing.MainFrame2</mainClass>
+									<!-- mainClass>sm.claudio.imaging.swing.MainFrame2</mainClass -->
+									<mainClass>${mainClassName}</mainClass>
 								</manifest>
 							</archive>
 						</configuration>
@@ -140,12 +144,6 @@
 								<goals>
 									<goal>single</goal>
 								</goals>
-								<configuration>
-									<!-- <descriptors> -->
-									<!-- <descriptor>${basedir}/src/main/assembly/assembly.xml</descriptor> -->
-									<!-- </descriptors> -->
-									<appendAssemblyId>true</appendAssemblyId>
-								</configuration>
 							</execution>
 						</executions>
 					</plugin>
@@ -163,12 +161,12 @@
 				<configuration>
 					<archive>
 						<!-- This is required by bnd-maven-plugin -->
-						<manifestFile>
+						<!--   manifestFile>
 							${project.build.outputDirectory}/META-INF/MANIFEST.MF
 						</manifestFile>
 						<manifestEntries>
 							<Automatic-Module-Name>commons.cli</Automatic-Module-Name>
-						</manifestEntries>
+						</manifestEntries -->
 					</archive>
 				</configuration>
 			</plugin>
@@ -193,8 +191,31 @@
 					<!-- compilerArgs> - - enable - preview</compilerArgs -->
 					<source>${java.version}</source>
 					<target>${java.version}</target>
+					<fork>true</fork>
+					<compilerArgs>
+						<!--  arg  enable-preview< / arg -->
+						<arg>-Xlint:all</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
+					</compilerArgs>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>${lombok.version}</version>
+						</path>
+					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
+			
 			<plugin>
 				<groupId>org.openjfx</groupId>
 				<artifactId>javafx-maven-plugin</artifactId>
